--- a/src/app/Modules/landing/components/landing/landing.component.html
+++ b/src/app/Modules/landing/components/landing/landing.component.html
@@ -342,12 +342,12 @@
   <h2 class="sr-only">Productos</h2>
 
   <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
-    <a href="#" class="group">
+    <a routerLink="/ver" class="group">
       <div class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
-        <img src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-01.jpg" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." class="h-full w-full object-cover object-center group-hover:opacity-75">
+        <img src="https://support.apple.com/library/APPLE/APPLECARE_ALLGEOS/SP726/SP726-iphone6s-rosegold-select-2015.png" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." class="h-full w-full object-cover object-center group-hover:opacity-75">
       </div>
-      <h3 class="mt-4 text-sm text-gray-700">Earthen Bottle</h3>
-      <p class="mt-1 text-lg font-medium text-gray-900">$48</p>
+      <h3 class="mt-4 text-sm text-gray-700">Iphone 6S</h3>
+      <p class="mt-1 text-lg font-medium text-gray-900">$400.00</p>
     </a>
 
     <a href="#" class="group">
