--- a/src/app/Modules/productos/components/editproduc/edicproduc.component.html
+++ b/src/app/Modules/productos/components/editproduc/edicproduc.component.html
@@ -1,1 +1,143 @@
 <p>edicproduc works!</p>
+<body class="bg-gray-500">
+	<!-- Menu -->
+	<mat-toolbar class="w-16 md:w-32 lg:w-48 flex justify-between" color="primary">
+		<div class="w-16 md:w-32 lg:w-48 flex justify-start">
+	  		<a href=" " class="w-16 md:w-32 lg:w-48 flex items-center">
+		 	 <img src="assets/Mercado no Libre Irregular.png" class="mr-3 h-8" alt="FlowBite Logo" />
+		  	<span class="hidden md:block self-center  font-semibold text-gray-900 uppercase dark:text-white">Mercado 
+			<br>No Libre</span>
+	  		</a>
+  		</div>
+  		<!-- Buscador -->
+  
+		<form class="flex items-center ">   
+			<label for="simple-search" class="sr-only">Search</label>
+				<div class="relative w-64 md:flex pt-2">
+					<div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+						<svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
+					</div>
+					<input type="text" id="simple-search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search" required>
+				</div>
+			<button type="submit" class="p-2.5 ml-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+				<svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+				<span class="sr-only">Search</span>
+			</button>
+		</form>
+
+		<div class="flex justify-end w-16 md:w-32 lg:w-48">
+				<!-- CarritoDeCompras -->
+				<button mat-icon-button matBadge="8" matBadgePosition="before" matBadgeColor="accent" routerLink="/Carrito">
+					<mat-icon>shopping cart</mat-icon>
+				</button>
+				<!-- Login -->
+				<button mat-icon-button class="app-login"  aria-label="Example icon-button with share icon" routerLink="/Login">
+					<mat-icon>login</mat-icon>
+				</button>
+		</div>
+  </mat-toolbar>
+	
+  <mat-toolbar color="primary" class="flex justify-center ">
+				<!--3 puntitos-->
+		<nav class="hidden lg:block flex items-center justify-between flex-wrap  p-1"> 
+			<div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
+				<div class="text-sm lg:flex-grow">
+					<!--Inicio-->
+					<button routerLink="" class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">
+						<span>Inicio </span>
+					</button>
+					<!--Fin de inicio-->
+					<!--Mi carrito-->
+					<button routerLink="/Carrito" class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">
+						<span>Mi carrito </span>
+					</button>
+						<!--Mi carrito-->
+						<!--Categorias-->
+					<button class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4"  [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+						<span class="pr-1  flex-1">Categorias</span>
+					</button>
+					
+					<mat-menu  #menu="matMenu" class="flex justify-center">
+						<button mat-menu-item>
+						<span>Moda</span>
+						</button>
+						<button mat-menu-item>
+						<span>Juegos</span>
+						</button>
+						<button mat-menu-item [matMenuTriggerFor]="Tecnologia" aria-label="Example icon-button with a menu">
+						<span>Tecnologia</span>
+						</button>
+						<mat-menu #Tecnologia="matMenu" xPosition="after">
+						<button mat-menu-item>Telefonos</button>
+						<button mat-menu-item [matMenuTriggerFor]="Computadoras">Computadoras</button>
+						<button mat-menu-item>Camara y Accesorios</button>
+						<button mat-menu-item>Electronica</button>
+						</mat-menu>
+						<mat-menu #Computadoras="matMenu">
+						<button mat-menu-item>PC</button>
+						<button mat-menu-item>Laptops</button>
+						</mat-menu>
+						<button mat-menu-item >
+						<span>Juguetes</span>
+						</button>	
+					</mat-menu>
+					<!--Fin de categoria-->
+					<!--Administrar-->
+					<button class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4"  [matMenuTriggerFor]="Administrar" aria-label="Example icon-button with a menu">
+						<span>Administrar</span>
+					</button>
+					<mat-menu #Administrar="matMenu"> 
+						<button routerLink="/misproductos" mat-menu-item>Mis Productos</button>
+						<button routerLink="/agregar" mat-menu-item>Agregar Producto</button>
+					</mat-menu>
+					<button class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4"  aria-label="Example icon-button with a menu">
+						<span>Cerrar Sesion</span>
+					</button>
+				</div>
+			</div>
+		</nav>
+	</mat-toolbar>
+	<mat-card>
+		<mat-grid-list cols="2">
+		  <mat-grid-tile>
+			<div class="izquierda">
+	  
+			  <img 
+				   class="imagen-izquierda"
+				   
+				   src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-01.jpg" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper.">
+			</div>
+			<div>
+			  <img  src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-01.jpg" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper.">
+			</div>
+			<br>
+		  </mat-grid-tile>
+		  <mat-grid-tile class="detalles">
+				<h1 class="mat-display-2">Producto</h1>
+				<p>Descripcion/p>
+				<strong>Precio</strong>
+				<h1 class="mat-display-2">Precio</h1>
+				<mat-chip-list >
+				<mat-chip color="warn" selected>
+					<mat-icon>check</mat-icon>
+					En el carrito de compras
+				</mat-chip>
+				</mat-chip-list>
+				<button  class="carrito" mat-raised-button color="accent">
+		
+				<mat-icon>add</mat-icon>
+				Agregar al carrito
+				</button>
+				<button  class="carrito" mat-raised-button color="accent">
+				<mat-icon>delete</mat-icon>
+				Quitar del carrito
+				</button>
+				<a routerLink="/tienda" class="comprar" mat-raised-button color="primary">
+				Seguir comprando
+				</a>
+			</mat-grid-tile>
+		</mat-grid-list>
+	  </mat-card>
+	  
+
+</body>
