--- a/src/app/Modules/productos/components/verproducto/verproducto.component.html
+++ b/src/app/Modules/productos/components/verproducto/verproducto.component.html
@@ -1,4 +1,4 @@
-<body class="bg-gray-500">
+<body class="bg-white w-full h-auto">
 	<!-- Menu -->
 	<mat-toolbar class="w-16 md:w-32 lg:w-48 flex justify-between" color="primary">
 		<div class="w-16 md:w-32 lg:w-48 flex justify-start">
@@ -96,47 +96,67 @@
 			</div>
 		</nav>
 	</mat-toolbar>
-	<mat-card>
-		<mat-grid-list cols="2">
-		  <mat-grid-tile>
-			<div class="izquierda">
-	  
-			  <img 
-				   class="imagen-izquierda"
-				   
-				   src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-01.jpg" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper.">
-			</div>
-			<div>
-			  <img  src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-01.jpg" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper.">
-			</div>
-			<br>
-		  </mat-grid-tile>
-		  <mat-grid-tile class="detalles">
-				<h1 class="mat-display-2">Producto</h1>
-				<p>Descripcion/p>
-				<strong>Precio</strong>
-				<h1 class="mat-display-2">Precio</h1>
-				<mat-chip-list >
-				<mat-chip color="warn" selected>
-					<mat-icon>check</mat-icon>
-					En el carrito de compras
-				</mat-chip>
-				</mat-chip-list>
-				<button  class="carrito" mat-raised-button color="accent">
-		
-				<mat-icon>add</mat-icon>
-				Agregar al carrito
-				</button>
-				<button  class="carrito" mat-raised-button color="accent">
-				<mat-icon>delete</mat-icon>
-				Quitar del carrito
-				</button>
-				<a routerLink="/tienda" class="comprar" mat-raised-button color="primary">
-				Seguir comprando
-				</a>
-			</mat-grid-tile>
-		</mat-grid-list>
-	  </mat-card>
-	  
+    <section class="pt-12 pb-24 bg-blueGray-100 rounded-b-10xl overflow-hidden">
+        <div class="container px-4 mx-auto">
+        <div class="flex flex-wrap -mx-4">
+            <div class="w-full lg:w-1/2 px-4 mb-16 lg:mb-0">
+            <div class="flex -mx-4 flex-wrap items-center justify-between lg:justify-start lg:items-start xl:items-center">
+                <div class="w-full sm:w-auto min-w-max px-4 text-center flex sm:flex-col items-center justify-center">
+                <a class="inline-block sm:mb-12 mr-4 sm:mr-0 transform -rotate-90 sm:transform-none hover:text-darkBlueGray-400" href="#">
+                    <svg width="12" height="8" viewbox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1.54064 7.21015C1.18719 7.59662 0.615928 7.59662 0.265087 7.21015C-0.087058 6.82369 -0.0896663 6.19929 0.265087 5.81282L5.36206 0.289847C5.71421 -0.0966173 6.28416 -0.0966172 6.63892 0.289847L11.7359 5.81282C12.088 6.19785 12.088 6.82369 11.7359 7.21015C11.3824 7.59662 10.8112 7.59662 10.4603 7.21015L5.99853 2.68073L1.54064 7.21015Z" fill="currentColor"></path>
+                    </svg>
+                </a>
+                <a class="h-30 block mb-4 mr-2 sm:mr-0" href="#">
+                    <img class="object-scale-down w-8 h-8" src="https://http2.mlstatic.com/D_NQ_NP_734958-MLA43712584175_102020-O.webp" alt="">
+                </a>
+                <a class="hidden sm:block h-30 mb-4 mr-2 sm:mr-0" href="#">
+                    <img class="object-scale-down w-8 h-8" src="https://http2.mlstatic.com/D_NQ_NP_901429-MLA43712471488_102020-O.webp" alt="">
+                </a>
+                <a class="hidden sm:block h-30 mb-4 mr-2 sm:mr-0 rounded-xl border-2 border-blueGray-500" href="#">
+                    <img class="object-scale-down w-8 h-8" src="https://support.apple.com/library/APPLE/APPLECARE_ALLGEOS/SP726/SP726-iphone6s-rosegold-select-2015.png" alt="">
+                </a>
+                <a class="h-30 block mb-4 sm:mb-12 mr-4 sm:mr-0" href="#">
+                    <img class="object-scale-down w-8 h-8" src="https://http2.mlstatic.com/D_NQ_NP_651048-MLA43712471490_102020-O.webp" alt="">
+                </a>
+                <a class="inline-block transform -rotate-90 sm:transform-none hover:text-darkBlueGray-400" href="#">
+                    <svg width="12" height="8" viewbox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M10.4594 0.289849C10.8128 -0.0966154 11.3841 -0.0966154 11.7349 0.289849C12.0871 0.676313 12.0897 1.30071 11.7349 1.68718L6.63794 7.21015C6.28579 7.59662 5.71584 7.59662 5.36108 7.21015L0.264109 1.68718C-0.0880364 1.30215 -0.0880363 0.676312 0.264109 0.289848C0.617558 -0.096616 1.18882 -0.0966159 1.53966 0.289848L6.00147 4.81927L10.4594 0.289849Z" fill="currentColor"></path>
+                    </svg>
+                </a>
+                </div>
+                <div class="w-full sm:w-9/12 px-4">
+                <img class="mb-5" src="https://support.apple.com/library/APPLE/APPLECARE_ALLGEOS/SP726/SP726-iphone6s-rosegold-select-2015.png" alt="">
+                <p class="text-sm text-gray-300">Roll over image to zoom in</p>
+                </div>
+            </div>
+            </div>
+            <div class="w-full lg:w-1/2 px-4">
+            <div class="max-w-md mb-6">
+                <span class="text-xs text-gray-400 tracking-wider">Aple #3299803</span>
+                <h2 class="mt-6 mb-4 text-5xl md:text-7xl lg:text-8xl font-heading font-medium">Iphone 6S</h2>
+                <p class="flex items-center mb-6">
+                <span class="mr-2 text-sm text-blue-500 font-medium">$</span>
+                <span class="text-3xl text-blue-500 font-medium">400.00</span>
+                </p>
+                <p class="text-lg text-gray-400">El iPhone 6s es un teléfono inteligente de gama alta diseñado por Apple Inc., con procesador de dos núcleos a 1.85 GHz, 2 GB de memoria RAM y pantalla de 4,7 pulgadas.</p>
+            </div>
+            <div class="mb-10">
+                <h4 class="mb-3 font-heading font-medium">Cantidad:</h4>
+                <input class="w-24 px-3 py-2 text-center bg-white border-2 border-blue-500 outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 rounded-xl" type="text" placeholder="1">
+            </div>
+                <div class="flex justify-start w-full  ">
 
+                        <div >
+                            <a class="w-full px-5 py-2  mr-2 mb-2 leading-8 font-heading font-medium tracking-tighter text-xl text-white text-center bg-blue-500 focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 hover:bg-blue-600 rounded-xl" routerLink="/Carrito">Añadir al carrito</a>
+                        </div>
+                        <div >
+                            <a class="w-full px-5 py-2 leading-8 font-heading font-medium tracking-tighter text-xl text-white text-center bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900 rounded-xl" routerLink="/Carrito">Seguir Comprando</a>
+
+                        </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
 </body>
