--- a/src/app/Modules/landing/components/landing/landing.component.html
+++ b/src/app/Modules/landing/components/landing/landing.component.html
@@ -121,230 +121,30 @@
     </div>
   </div>
 </nav>
-  <!--3 puntitos-->
-<!--3 puntitos-->
-  <!--Boton de categoria-->
-  <!-- component -->
-  <!--SS
-  <nav class="flex items-center justify-between flex-wrap  p-1">
-    <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
-      <div class="text-sm lg:flex-grow">
-        <a routerLink="" href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">
-          Inicio
-        </a>
-      
-        <a class="group inline-block block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">
-          <button
-            class="outline-none focus:outline-none rounded-sm flex items-center text-teal-200 min-w-10"
-          >
-            <span class="pr-1  flex-1">Categorias</span>
-            <span>
-              <svg
-                class="fill-current h-4 w-4 transform group-hover:-rotate-180 
-                transition duration-150 ease-in-out"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 20 20"
-              >
-                <path
-                  d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                />
-              </svg>
-            </span>
-          </button>
-          <ul
-            class="bg-black border rounded-sm transform scale-0 group-hover:scale-100 absolute 
-          transition duration-150 ease-in-out origin-top min-w-32"
-          >
-            <li class="rounded-sm px-3 py-1 hover:bg-zinc-800">Moda</li>
-            <li class="rounded-sm px-3 py-1 hover:bg-zinc-800">Juegos</li>
-            <li class="rounded-sm relative px-3 py-1 hover:bg-zinc-800">
-              <button
-                class="w-full text-left flex items-center outline-none focus:outline-none"
-              >
-                <span class="pr-1 flex-1">Tecnologia</span>
-                <span class="mr-auto">
-                  <svg
-                    class="fill-current h-4 w-4
-                    transition duration-150 ease-in-out"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 20 20"
-                  >
-                    <path
-                      d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                    />
-                  </svg>
-                </span>
-              </button>
-              <ul
-                class="bg-black border rounded-sm absolute top-0 right-0 
-          transition duration-150 ease-in-out origin-top-left
-          min-w-32
-          "
-              >
-                <li class="px-3 py-1 hover:bg-zinc-800">Telefonos</li>
-                <li class="rounded-sm relative px-3 py-1 hover:bg-zinc-800">
-                  <button
-                    class="w-full text-left flex items-center outline-none focus:outline-none"
-                  >
-                    <span class="pr-1 flex-1">Computadoras</span>
-                    <span class="mr-auto ">
-                      <svg
-                        class="fill-current h-4 w-4
-                        transition duration-150 ease-in-out"
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 20 20"
-                      >
-                        <path
-                          d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                        />
-                      </svg>
-                    </span>
-                  </button>
-                  <ul
-                    class="bg-black border rounded-sm absolute top-0 right-0 
-              transition duration-150 ease-in-out origin-top-left
-              min-w-32
-              "
-                  >
-                    <li class="px-3 py-1 hover:bg-zinc-800">PC</li>
-                    <li class="px-3 py-1 hover:bg-zinc-800">Laptops</li>
-                  </ul>
-                </li>
-                <li class="px-3 py-1 hover:bg-zinc-800">Camara y Accesorios</li>
-                <li class="px-3 py-1 hover:bg-zinc-800">Electronica</li>
-              </ul>
-            </li>
-            <li class="rounded-sm px-3 py-1 hover:bg-zinc-800">Juguetes</li>
-          </ul>
-        
-        
-
-        </a>
-        <a routerLink="/Carrito" class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">
-          Mi carrito
-        </a>
-        <a class="group inline-block">
-          <button
-            class="outline-none focus:outline-none rounded-sm flex items-center text-teal-200 min-w-10"
-          >
-            <span class="pr-1  flex-1">Administrador</span>
-            <span>
-              <svg
-                class="fill-current h-4 w-4 transform group-hover:-rotate-180 
-                transition duration-150 ease-in-out"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 20 20"
-              >
-                <path
-                  d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                />
-              </svg>
-            </span>
-          </button>
-          <ul
-            class="bg-black border rounded-sm transform scale-0 group-hover:scale-100 absolute 
-          transition duration-150 ease-in-out origin-top min-w-32"
-          >
-          <button> 
-            <li routerLink="/Productos" class="rounded-sm px-3 py-1 hover:bg-zinc-800">Mis Productos </li>
-          </button>
-          <br>
-          <button>
-            <li  routerLink="/agregar" class="rounded-sm px-3 py-1 hover:bg-zinc-800">Agregar Producto</li>
-          </button>
-
-          </ul>
-        </a>
-        <a routerLink="" class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">
-          Cerrar Sesion
-        </a>
-      </div>
-    </div>
-    </nav>
-    <style>
-      /* since nested groupes are not supported we have to use 
-        regular css for the nested dropdowns 
-      */
-      li>ul                 { transform: translatex(100%) scale(0) }
-      li:hover>ul           { transform: translatex(101%) scale(1) }
-      li > button svg       { transform: rotate(-90deg) }
-      li:hover > button svg { transform: rotate(-270deg) }
-
-      /* Below styles fake what can be achieved with the tailwind config
-        you need to add the group-hover variant to scale and define your custom
-        min width style.
-        See https://codesandbox.io/s/tailwindcss-multilevel-dropdown-y91j7?file=/index.html
-        for implementation with config file
-      */
-      .group:hover .group-hover\:scale-100 { transform: scale(1) }
-      .group:hover .group-hover\:-rotate-180 { transform: rotate(180deg) }
-      .scale-0 { transform: scale(0) }
-      .min-w-32 { min-width: 8rem }
-    </style>
-  -->
   </mat-toolbar>
 
 
 
 <!--Carousel inicio-->
-
-<div class="slider ">
-  <div class="2xl:-Auto">
-  <ul>
-      <li>
-          <img src="https://http2.mlstatic.com/D_NQ_906475-MLA52952927623_122022-OO.webp">
-      </li>
-      <li>
-          <img src="https://http2.mlstatic.com/D_NQ_853304-MLA52688079314_122022-OO.webp">
-      </li>
-      <li>
-          <img src="https://http2.mlstatic.com/D_NQ_669520-MLA52774282788_122022-OO.webp">
-      </li>
-      <li>
-          <img src="https://http2.mlstatic.com/D_NQ_988887-MLA52700708750_122022-OO.webp">
-      </li>
-  </ul>
-</div>
-</div>
-
-<!--Carousel final-->
-
-
-  <!--banner-->
-  <!-- comentar
-  <div class="container mx-auto py-9 md:py-12 px-4 md:px-6">
-    <div class="flex items-strech justify-center flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-6 lg:space-x-8">
-        <div class="flex flex-col md:flex-row items-strech justify-between bg-gray-50 dark:bg-gray-800 py-6 px-6 md:py-12 lg:px-12 md:w-8/12 lg:w-7/12 xl:w-8/12 2xl:w-9/12">
-            <div class="flex flex-col justify-center md:w-1/2">
-                <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800 dark:text-white">Best Deal</h1>
-                <p class="text-base lg:text-xl text-gray-800 dark:text-white mt-2">Save upto <span class="font-bold">50%</span></p>
-            </div>
-            <div class="md:w-1/2 mt-8 md:mt-0 flex justify-center md:justify-end">
-                <img src="https://i.ibb.co/J2BtZdg/Rectangle-56-1.png" alt="" class="" />
-            </div>
-        </div>
-        <div class="md:w-4/12 lg:w-5/12 xl:w-4/12 2xl:w-3/12 bg-gray-50 dark:bg-gray-800 py-6 px-6 md:py-0 md:px-4 lg:px-6 flex flex-col justify-center relative">
-            <div class="flex flex-col justify-center">
-                <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800 dark:text-white">Game Console</h1>
-                <p class="text-base lg:text-xl text-gray-800 dark:text-white">Save Upto <span class="font-bold">30%</span></p>
-            </div>
-            <div class="flex justify-end md:absolute md:bottom-4 md:right-4 lg:bottom-0 lg:right-0">
-                <img src="https://i.ibb.co/rGfP7mp/Rectangle-59-1.png" alt="" class="md:w-20 md:h-20 lg:w-full lg:h-full" />
-            </div>
-        </div>
-    </div>
-</div>
--->
-
+<div>
+  <swiper [slidesPerView]="1" [spaceBetween]="30" [autoplay]="{delay: 2500,disableOnInteraction: false}" [loop]="true" [pagination]="{clickable: true}"[navigation]="true" class="mySwiper">
+      <ng-template swiperSlide><img src="https://http2.mlstatic.com/D_NQ_906475-MLA52952927623_122022-OO.webp"></ng-template>
+      <ng-template swiperSlide><img src="https://http2.mlstatic.com/D_NQ_853304-MLA52688079314_122022-OO.webp"></ng-template>
+      <ng-template swiperSlide><img src="https://http2.mlstatic.com/D_NQ_669520-MLA52774282788_122022-OO.webp"></ng-template>
+      <ng-template swiperSlide><img src="https://http2.mlstatic.com/D_NQ_988887-MLA52700708750_122022-OO.webp"></ng-template>
+      <ng-template swiperSlide><img src="https://http2.mlstatic.com/D_NQ_786816-MLA53023203991_122022-OO.webp"></ng-template>
+      <ng-template swiperSlide><img src="https://http2.mlstatic.com/D_NQ_613053-MLA53042835015_122022-OO.webp"></ng-template>
+  </swiper>
+  </div>
 <!-- Parte de lista de productos -->
 <div class="bg-white">
 <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
   <h2 class="sr-only">Productos</h2>
 
-  <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
+  <div class="grid grid-cols-2 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
     <a routerLink="/ver" class="group">
       <div class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
-        <img src="https://support.apple.com/library/APPLE/APPLECARE_ALLGEOS/SP726/SP726-iphone6s-rosegold-select-2015.png" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." class="h-full w-full object-cover object-center group-hover:opacity-75">
+        <img src="https://cdn.shopify.com/s/files/1/0287/9845/1786/products/Apple_iP6Gold_P2_a9a9946f-dfa2-400b-a08a-4e493d1158fc.png?v=1650483410" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." class="h-full w-full object-cover object-center group-hover:opacity-75">
       </div>
       <h3 class="mt-4 text-sm text-gray-700">Iphone 6S</h3>
       <p class="mt-1 text-lg font-medium text-gray-900">$400.00</p>
