--- a/src/app/Modules/productos/components/agregar/agregar.component.html
+++ b/src/app/Modules/productos/components/agregar/agregar.component.html
@@ -1,69 +1,129 @@
 <body class="bg-gray-500 w-full">
-  <div class="flex justify-start">
-
-  </div>
-  <div class="flex justify-end py-3">
-      <div class="w-full max-w-4xl bg-slate-100  mx-auto rounded-xl shadow-xl overflow-hidden p-6 space-y-10">
-        <h1 class="font-semibold text-2xl">Agregar Producto</h1>  
-        <div class="">
-              <label class="text-black " for="emailAddress">Nombre del producto </label>
-              <input type="text" id="Nombredelproducto" placeholder="Nombre del producto" class="block p-2.5 w-full text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
-          </div>
-            <div class="">
-                <label class="text-black " for="emailAddress">Descripcion </label>
-                <textarea id="message" rows="4" class="block p-2.5 w-full text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Descripcion del producto..."></textarea>
-            </div>
-              <div class="flex justify-between">
-                <div class="py-3"> 
-                  <mat-form-field appearance="fill">
-                    <mat-label class="">Categoria</mat-label>
-                    <mat-select>
-                      <mat-option value="1">Moda</mat-option>
-                      <mat-option value="2">Juegos</mat-option>
-                   <mat-optgroup label="Tecnologia"> 
-                      <mat-option value="3">Telefonos</mat-option>  
-                      <mat-option value="5">Camaras y Accesorios</mat-option>
-                      <mat-option value="6">Electronica</mat-option>
-                   </mat-optgroup>     
-                   <mat-optgroup label="Computadoras">  
-                    <mat-option value="4">PC</mat-option>
-                    <mat-option value="5">Laptops</mat-option>
-                    </mat-optgroup>   
-                      <mat-option value="4">Juguetes</mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                  
-                </div>
-                <div>
-                   <label class="text-black " for="emailAddress">Precio </label>
-                      <div class="">
-                         <span matTextPrefix>$&nbsp;</span>
-                          <input matInput type="number" class="p-2.5 w-48 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Precio">
-                     </div>
-                </div>
-                <div>      
-                      <label class="text-black " for="emailAddress">Cantidad</label>
-                      <input matInput type="number" class="block p-2.5 w-48 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Cantidad">
-                </div>
-                
-              </div> 
-              <div>      
-                <label class="text-black " for="fotos">Fotos</label>
-                <input accept="image/png,image/jpeg" #foto required id="fotos" multiple type="file" class="block p-2.5 " placeholder="Cantidad">
+  <section class="pt-12 pb-24 bg-blueGray-100 rounded-b-10xl overflow-hidden">
+    <div class="flex justify-end py-3">
+      <div class="max-w-screen-xl bg-slate-100  mx-auto rounded-xl shadow-xl overflow-hidden p-6 space-y-10">
+      
+    <div class="grid grid-cols-2 sm:grid-cols-5 grid-rows-1">
+        <!--Fotos-->
+        <div class="col-span-1 sm:col-span-3">
+          <div class="w-full lg:w-1/2 px-4 mb-16 lg:mb-0">
+            <div class="flex -mx-4 flex-wrap items-center justify-between lg:justify-start lg:items-start xl:items-center">
+              <div class="w-full sm:w-auto min-w-max px-4 text-center flex sm:flex-col items-center justify-center">
+              <a class="inline-block sm:mb-12 mr-4 sm:mr-0 transform -rotate-90 sm:transform-none hover:text-darkBlueGray-400" href="#">
+                <svg width="12" height="8" viewbox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.54064 7.21015C1.18719 7.59662 0.615928 7.59662 0.265087 7.21015C-0.087058 6.82369 -0.0896663 6.19929 0.265087 5.81282L5.36206 0.289847C5.71421 -0.0966173 6.28416 -0.0966172 6.63892 0.289847L11.7359 5.81282C12.088 6.19785 12.088 6.82369 11.7359 7.21015C11.3824 7.59662 10.8112 7.59662 10.4603 7.21015L5.99853 2.68073L1.54064 7.21015Z" fill="currentColor"></path>
+                </svg>
+              </a>
+              <a class="h-30 block mb-4 mr-2 sm:mr-0" href="#">
+                <img class="object-scale-down w-8 h-8" src="https://http2.mlstatic.com/D_NQ_NP_734958-MLA43712584175_102020-O.webp" alt="">
+                <a href="#" class="font-semibold hover:text-red-500 text-gray-500 text-xs">Eliminar</a>
+              </a>
+              <a class="hidden sm:block h-30 mb-4 mr-2 sm:mr-0" href="#">
+                <img class="object-scale-down w-8 h-8" src="https://http2.mlstatic.com/D_NQ_NP_901429-MLA43712471488_102020-O.webp" alt="">
+                <a href="#" class="font-semibold hover:text-red-500 text-gray-500 text-xs">Eliminar</a>
+              </a>
+              <a class="hidden sm:block h-30 mb-4 mr-2 sm:mr-0 rounded-xl border-2 border-blueGray-500" href="#">
+                <img class="object-scale-down w-8 h-8" src="https://support.apple.com/library/APPLE/APPLECARE_ALLGEOS/SP726/SP726-iphone6s-rosegold-select-2015.png" alt="">
+                <a href="#" class="font-semibold hover:text-red-500 text-gray-500 text-xs">Eliminar</a>
+              </a>
+              <a class="h-30 block mb-4 sm:mb-12 mr-4 sm:mr-0" href="#">
+                <img class="object-scale-down w-8 h-8" src="https://http2.mlstatic.com/D_NQ_NP_651048-MLA43712471490_102020-O.webp" alt="">
+                <a href="#" class="font-semibold hover:text-red-500 text-gray-500 text-xs">Eliminar</a>
+              </a>
+              <a class="inline-block transform -rotate-90 sm:transform-none hover:text-darkBlueGray-400" href="#">
+                <svg width="12" height="8" viewbox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10.4594 0.289849C10.8128 -0.0966154 11.3841 -0.0966154 11.7349 0.289849C12.0871 0.676313 12.0897 1.30071 11.7349 1.68718L6.63794 7.21015C6.28579 7.59662 5.71584 7.59662 5.36108 7.21015L0.264109 1.68718C-0.0880364 1.30215 -0.0880363 0.676312 0.264109 0.289848C0.617558 -0.096616 1.18882 -0.0966159 1.53966 0.289848L6.00147 4.81927L10.4594 0.289849Z" fill="currentColor"></path>
+                </svg>
+              </a>
               </div>
+              <div class="w-full sm:w-9/12 px-4">
+              <img class="col-span-1 mb-5" src="https://support.apple.com/library/APPLE/APPLECARE_ALLGEOS/SP726/SP726-iphone6s-rosegold-select-2015.png" alt="">
+              
+              <div>      
+                <label class="text-black " for="fotos">Agregar Fotos</label>
+                <input accept="image/png,image/jpeg" #foto required id="fotos" multiple type="file" class="block p-2.5 " placeholder="Cantidad">
+                </div>
+              </div>
+          
+            </div>
+          </div>
 
-              <div class="flex justify-between">
+
+
+        </div>
+
+        
+        <!--Agregar-->
+            <div class="col-span-2">
+              <h1 class="font-semibold text-2xl">Agregar Producto</h1>  
+                  <div class="">
+                        <label class="text-black " for="emailAddress">Nombre del producto </label>
+                        <input type="text" id="Nombredelproducto" placeholder="Nombre del producto" class="block p-2.5 w-full text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                  </div>
+                  <div class="">
+                          <label class="text-black " for="emailAddress">Descripcion </label>
+                          <textarea id="message" rows="4" class="block p-2.5 w-full text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Descripcion del producto..."></textarea>
+                  </div>
+                        <div class="flex justify-between">
+                          <div class="py-3"> 
+                            <mat-form-field appearance="fill">
+                              <mat-label class="">Categoria</mat-label>
+                              <mat-select>
+                                <mat-option value="1">Moda</mat-option>
+                                <mat-option value="2">Juegos</mat-option>
+                            <mat-optgroup label="Tecnologia"> 
+                                <mat-option value="3">Telefonos</mat-option>  
+                                <mat-option value="5">Camaras y Accesorios</mat-option>
+                                <mat-option value="6">Electronica</mat-option>
+                            </mat-optgroup>     
+                            <mat-optgroup label="Computadoras">  
+                              <mat-option value="4">PC</mat-option>
+                              <mat-option value="5">Laptops</mat-option>
+                            </mat-optgroup>   
+                                <mat-option value="4">Juguetes</mat-option>
+                              </mat-select>
+                            </mat-form-field>
+                            
+                          </div>
+                          <div>      
+                            <label class="text-black " for="emailAddress">Marca</label>
+                            <input matInput type="text" class="block p-2.5 w-48 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Marca">
+                          </div>
+
+                          
+                        </div> 
+                        <!--Poner aqui-->
+                        <div class="flex justify-between">
+                          <div>
+                            <label class="text-black " for="emailAddress">Precio </label>
+                                <div class="">
+                                  <span matTextPrefix>$&nbsp;</span>
+                                    <input matInput type="number" class="p-2.5 w-48 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Precio">
+                              </div>
+                          </div>
+                          <div>      
+                                <label class="text-black " for="emailAddress">Cantidad</label>
+                                <input matInput type="number" class="block p-2.5 w-48 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Cantidad">
+                          </div>
+
+                        </div>
+                      </div>
+
+                        
+                </div>
+                <!--Botones-->
+                <div class="flex justify-between">
                   <a routerLink="" class="flex font-semibold text-indigo-600 text-sm mt-10">
                     <svg class="fill-current mr-2 text-indigo-600 w-4" viewBox="0 0 448 512"></svg>
                     Regresar
-                    </a>
-                        <a routerLink="/agregar" class="flex font-semibold text-indigo-600 text-sm mt-10">
+                  </a>
+                    <a routerLink="/agregar" class="flex font-semibold text-indigo-600 text-sm mt-10">
                     <svg class="fill-current mr-2 text-indigo-600 w-4" viewBox="0 0 448 512"></svg>
                     Agregar
                     </a>
-                </div>
-               
-          </div>
-      </div>
+              </div>
+            </div>
 
-    </body>
+   </div>
+  </section>
+</body>
