--- a/src/app/Modules/productos/components/categoria/categoria.component.html
+++ b/src/app/Modules/productos/components/categoria/categoria.component.html
@@ -1,162 +1,13 @@
-<body class="bg-white w-full h-auto">
-	<!-- Menu -->
-	<mat-toolbar class="w-16 md:w-32 lg:w-48 flex justify-between" color="primary">
-		<div class="w-16 md:w-32 lg:w-48 flex justify-start">
-	  		<a href=" " class="w-16 md:w-32 lg:w-48 flex items-center">
-		 	 <img src="assets/Mercado no Libre Irregular.png" class="mr-3 h-8" alt="FlowBite Logo" />
-		  	<span class="hidden md:block self-center  font-semibold text-gray-900 uppercase dark:text-white">Mercado 
-			<br>No Libre</span>
-	  		</a>
-  		</div>
-  		<!-- Buscador -->
-  
-		<form class="flex items-center ">   
-			<label for="simple-search" class="sr-only">Search</label>
-				<div class="relative w-64 md:flex pt-2">
-					<div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
-						<svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
-					</div>
-					<input type="text" id="simple-search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search" required>
-				</div>
-			<button type="submit" class="p-2.5 ml-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-				<svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
-				<span class="sr-only">Search</span>
-			</button>
-		</form>
-
-		<div class="flex justify-end w-16 md:w-32 lg:w-48">
-				<!-- CarritoDeCompras -->
-				<button mat-icon-button matBadge="8" matBadgePosition="before" matBadgeColor="accent" routerLink="/Carrito">
-					<mat-icon>shopping cart</mat-icon>
-				</button>
-				<!-- Login -->
-				<button mat-icon-button class="app-login"  aria-label="Example icon-button with share icon" routerLink="/Login">
-					<mat-icon>login</mat-icon>
-				</button>
-		</div>
-  </mat-toolbar>
-	
-  <mat-toolbar color="primary" class="flex justify-center ">
-				<!--3 puntitos-->
-		<nav class="hidden lg:block flex items-center justify-between flex-wrap  p-1"> 
-			<div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
-				<div class="text-sm lg:flex-grow">
-					<!--Inicio-->
-					<button routerLink="" class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">
-						<span>Inicio </span>
-					</button>
-					<!--Fin de inicio-->
-					<!--Mi carrito-->
-					<button routerLink="/Carrito" class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">
-						<span>Mi carrito </span>
-					</button>
-						<!--Mi carrito-->
-						<!--Categorias-->
-					<button class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4"  [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-						<span class="pr-1  flex-1">Categorias</span>
-					</button>
-					
-					<mat-menu  #menu="matMenu" class="flex justify-center">
-						<button mat-menu-item>
-						<span>Moda</span>
-						</button>
-						<button mat-menu-item>
-						<span>Juegos</span>
-						</button>
-						<button mat-menu-item [matMenuTriggerFor]="Tecnologia" aria-label="Example icon-button with a menu">
-						<span>Tecnologia</span>
-						</button>
-						<mat-menu #Tecnologia="matMenu" xPosition="after">
-						<button mat-menu-item>Telefonos</button>
-						<button mat-menu-item [matMenuTriggerFor]="Computadoras">Computadoras</button>
-						<button mat-menu-item>Camara y Accesorios</button>
-						<button mat-menu-item>Electronica</button>
-						</mat-menu>
-						<mat-menu #Computadoras="matMenu">
-						<button mat-menu-item>PC</button>
-						<button mat-menu-item>Laptops</button>
-						</mat-menu>
-						<button mat-menu-item >
-						<span>Juguetes</span>
-						</button>	
-					</mat-menu>
-					<!--Fin de categoria-->
-					<!--Administrar-->
-					<button class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4"  [matMenuTriggerFor]="Administrar" aria-label="Example icon-button with a menu">
-						<span>Administrar</span>
-					</button>
-					<mat-menu #Administrar="matMenu"> 
-						<button routerLink="/misproductos" mat-menu-item>Mis Productos</button>
-						<button routerLink="/agregar" mat-menu-item>Agregar Producto</button>
-					</mat-menu>
-					<button class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4"  aria-label="Example icon-button with a menu">
-						<span>Cerrar Sesion</span>
-					</button>
-				</div>
-			</div>
-		</nav>
-	</mat-toolbar>
-    <section class="pt-12 pb-24 bg-blueGray-100 rounded-b-10xl overflow-hidden">
-        <div class="container px-4 mx-auto">
-        <div class="flex flex-wrap -mx-4">
-            <div class="w-full lg:w-1/2 px-4 mb-16 lg:mb-0">
-            <div class="flex -mx-4 flex-wrap items-center justify-between lg:justify-start lg:items-start xl:items-center">
-                <div class="w-full sm:w-auto min-w-max px-4 text-center flex sm:flex-col items-center justify-center">
-                <a class="inline-block sm:mb-12 mr-4 sm:mr-0 transform -rotate-90 sm:transform-none hover:text-darkBlueGray-400" href="#">
-                    <svg width="12" height="8" viewbox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1.54064 7.21015C1.18719 7.59662 0.615928 7.59662 0.265087 7.21015C-0.087058 6.82369 -0.0896663 6.19929 0.265087 5.81282L5.36206 0.289847C5.71421 -0.0966173 6.28416 -0.0966172 6.63892 0.289847L11.7359 5.81282C12.088 6.19785 12.088 6.82369 11.7359 7.21015C11.3824 7.59662 10.8112 7.59662 10.4603 7.21015L5.99853 2.68073L1.54064 7.21015Z" fill="currentColor"></path>
-                    </svg>
-                </a>
-                <a class="h-30 block mb-4 mr-2 sm:mr-0" href="#">
-                    <img class="object-scale-down w-8 h-8" src="https://http2.mlstatic.com/D_NQ_NP_734958-MLA43712584175_102020-O.webp" alt="">
-                </a>
-                <a class="hidden sm:block h-30 mb-4 mr-2 sm:mr-0" href="#">
-                    <img class="object-scale-down w-8 h-8" src="https://http2.mlstatic.com/D_NQ_NP_901429-MLA43712471488_102020-O.webp" alt="">
-                </a>
-                <a class="hidden sm:block h-30 mb-4 mr-2 sm:mr-0 rounded-xl border-2 border-blueGray-500" href="#">
-                    <img class="object-scale-down w-8 h-8" src="https://support.apple.com/library/APPLE/APPLECARE_ALLGEOS/SP726/SP726-iphone6s-rosegold-select-2015.png" alt="">
-                </a>
-                <a class="h-30 block mb-4 sm:mb-12 mr-4 sm:mr-0" href="#">
-                    <img class="object-scale-down w-8 h-8" src="https://http2.mlstatic.com/D_NQ_NP_651048-MLA43712471490_102020-O.webp" alt="">
-                </a>
-                <a class="inline-block transform -rotate-90 sm:transform-none hover:text-darkBlueGray-400" href="#">
-                    <svg width="12" height="8" viewbox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M10.4594 0.289849C10.8128 -0.0966154 11.3841 -0.0966154 11.7349 0.289849C12.0871 0.676313 12.0897 1.30071 11.7349 1.68718L6.63794 7.21015C6.28579 7.59662 5.71584 7.59662 5.36108 7.21015L0.264109 1.68718C-0.0880364 1.30215 -0.0880363 0.676312 0.264109 0.289848C0.617558 -0.096616 1.18882 -0.0966159 1.53966 0.289848L6.00147 4.81927L10.4594 0.289849Z" fill="currentColor"></path>
-                    </svg>
-                </a>
-                </div>
-                <div class="w-full sm:w-9/12 px-4">
-                <img class="mb-5" src="https://support.apple.com/library/APPLE/APPLECARE_ALLGEOS/SP726/SP726-iphone6s-rosegold-select-2015.png" alt="">
-                <p class="text-sm text-gray-300">Roll over image to zoom in</p>
-                </div>
-            </div>
-            </div>
-            <div class="w-full lg:w-1/2 px-4">
-            <div class="max-w-md mb-6">
-                <span class="text-xs text-gray-400 tracking-wider">Aple #3299803</span>
-                <h2 class="mt-6 mb-4 text-5xl md:text-7xl lg:text-8xl font-heading font-medium">Iphone 6S</h2>
-                <p class="flex items-center mb-6">
-                <span class="mr-2 text-sm text-blue-500 font-medium">$</span>
-                <span class="text-3xl text-blue-500 font-medium">400.00</span>
-                </p>
-                <p class="text-lg text-gray-400">El iPhone 6s es un teléfono inteligente de gama alta diseñado por Apple Inc., con procesador de dos núcleos a 1.85 GHz, 2 GB de memoria RAM y pantalla de 4,7 pulgadas.</p>
-            </div>
-            <div class="mb-10">
-                <h4 class="mb-3 font-heading font-medium">Cantidad:</h4>
-                <input class="w-24 px-3 py-2 text-center bg-white border-2 border-blue-500 outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 rounded-xl" type="text" placeholder="1">
-            </div>
-                <div class="flex justify-start w-full  ">
-
-                        <div >
-                            <a class="w-full px-5 py-2  mr-2 mb-2 leading-8 font-heading font-medium tracking-tighter text-xl text-white text-center bg-blue-500 focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 hover:bg-blue-600 rounded-xl" routerLink="/Carrito">Añadir al carrito</a>
-                        </div>
-                        <div >
-                            <a class="w-full px-5 py-2 leading-8 font-heading font-medium tracking-tighter text-xl text-white text-center bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900 rounded-xl" routerLink="/Carrito">Seguir Comprando</a>
-
-                        </div>
-                </div>
-            </div>
-        </div>
-        </div>
-    </section>
-</body>
+<div>
+<swiper [slidesPerView]="1" [spaceBetween]="30" [autoplay]="{delay: 2500,disableOnInteraction: false}" [loop]="true" [pagination]="{clickable: true}"[navigation]="true" class="mySwiper">
+    <ng-template swiperSlide><img src="https://http2.mlstatic.com/D_NQ_906475-MLA52952927623_122022-OO.webp"></ng-template
+    ><ng-template swiperSlide><img src="https://http2.mlstatic.com/D_NQ_853304-MLA52688079314_122022-OO.webp"></ng-template
+    ><ng-template swiperSlide><img src="https://http2.mlstatic.com/D_NQ_669520-MLA52774282788_122022-OO.webp"></ng-template
+    ><ng-template swiperSlide><img src="https://http2.mlstatic.com/D_NQ_988887-MLA52700708750_122022-OO.webp"></ng-template
+    ><ng-template swiperSlide>Slide 5</ng-template
+    ><ng-template swiperSlide>Slide 6</ng-template
+    ><ng-template swiperSlide>Slide 7</ng-template
+    ><ng-template swiperSlide>Slide 8</ng-template
+    ><ng-template swiperSlide>Slide 9</ng-template>
+</swiper>
+</div>
