--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -6,7 +6,10 @@
 
 // Include the common styles for Angular Material. We include this here so that you only
 
-@import '@angular/material/theming';        
+@import '@angular/material/theming';    
+@import "~swiper/css";
+@import "~swiper/css/pagination";
+@import "~swiper/css/navigation";
 // Be sure that you only ever include this mixin once!
 @include mat-core();
 $candy-app-primary: mat-palette($mat-gray, 900);        
