--- a/src/app/Modules/login/components/login/login.component.html
+++ b/src/app/Modules/login/components/login/login.component.html
@@ -11,14 +11,14 @@ style="background-image: url(https://images.unsplash.com/photo-1624916888581-489
             <div class="f-outline px-2 relative border rounded-lg focus-within:border-indigo-500">
                 <input type="email" name="email" placeholder=" "
                     class="block p-2 w-full text-lg appearance-none focus:outline-none bg-transparent" />
-                <label for="email"
-                    class="absolute ml-5 top-0 text-lg text-gray-700 bg-white mt-2 -z-1 duration-300 origin-0">Email</label>
+                <label for="Correo"
+                    class="rounded-lg absolute ml-5 top-0 text-lg text-gray-700 bg-white mt-2 -z-1 duration-300 origin-0">Correo</label>
             </div>
             <div class="f-outline px-2 relative border rounded-lg focus-within:border-indigo-500">
                 <input type="password" name="password" placeholder=" "
                     class="block p-2 w-full text-lg appearance-none focus:outline-none bg-transparent" />
                 <label for="password"
-                    class="absolute ml-5 top-0 text-lg text-gray-700 bg-white mt-2 -z-1 duration-300 origin-0">Password</label>
+                    class="rounded-lg absolute ml-5 top-0 text-lg text-gray-700 bg-white mt-2 -z-1 duration-300 origin-0">Contraseña</label>
             </div>
             <div class="block mt-2">
                 <label for="" class="flex items-center">
