--- a/src/app/Modules/landing/components/landing/landing.component.html
+++ b/src/app/Modules/landing/components/landing/landing.component.html
@@ -1,11 +1,11 @@
 <!-- Menu -->
-<mat-toolbar class="w-16 md:w-32 lg:w-48 flex justify-between" color="primary">
+<mat-toolbar class="w-16 md:w-32 h-10 lg:w-48 flex justify-between" color="primary">
  
 
-  <div class="w-16 md:w-32 lg:w-48 flex justify-start">
+  <div class="pt-10 w-16 md:w-32 lg:w-48 flex justify-start">
     <a href=" " class="w-16 md:w-32 lg:w-48 flex items-center">
         <img src="assets/Mercado no Libre Irregular.png" class="mr-3 h-8" alt="FlowBite Logo" />
-        <span class="hidden md:block self-center  font-semibold text-gray-900 uppercase dark:text-white">Mercado 
+        <span class=" hidden md:block self-center  font-semibold text-gray-900 uppercase dark:text-white">Mercado 
           <br>No Libre</span>
     </a>
 </div>
@@ -29,21 +29,6 @@
 
 <!-- component -->
 <!-- This is an example component -->
-<!-- 
-<div class="w-96 pt-2 relative mx-auto  text-gray-600">
-<input class="w-96 hover:w-full border-2 border-gray-300 bg-white h-10 px-auto pr-16 w-300 px-5 pr-16 rounded-lg text-sm focus:outline-none"
-  type="search" name="search" placeholder="Search">
-<button type="submit" class="absolute right-0 top-0 mt-5 mr-4">
-  <svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
-    xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
-    viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve"
-    width="512px" height="512px">
-    <path
-      d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
-  </svg>
-</button>
-</div>    
--->
 <div class="flex justify-end w-16 md:w-32 lg:w-48">
 <!-- CarritoDeCompras -->
   <button mat-icon-button matBadge="8" matBadgePosition="before" matBadgeColor="accent" routerLink="/Carrito">
