--- a/src/app/Modules/productos/components/agregar/agregar.component.html
+++ b/src/app/Modules/productos/components/agregar/agregar.component.html
@@ -2,7 +2,8 @@
   <section class="pt-12 pb-24 bg-blueGray-100 rounded-b-10xl overflow-hidden">
     <div class="flex justify-end py-3">
       <div class="max-w-screen-xl bg-slate-100  mx-auto rounded-xl shadow-xl overflow-hidden p-6 space-y-10">
- <form [formGroup]="formularioContacto" (ngSubmit)="submit()">   
+ <form [formGroup]="formularioContacto" (ngSubmit)="submit()">  
+  
     <div class="grid grid-cols-2  sm:grid-cols-5 grid-rows-1">
         <!--Fotos-->
         <div class="col-span-1 sm:col-span-3">
@@ -56,13 +57,18 @@
             <div class="col-span-2">
               <h1 class="font-semibold text-2xl">Agregar Producto</h1>  
                   <div class="">
-                        <label class="text-black ">Nombre del producto </label>
-                        <input type="text" formControlName="nombreP" required placeholder="Nombre del producto" class="block p-2.5 w-full text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                  </div>
+                    <mat-form-field class="example-full-width"> 
+                    <mat-label>Nombre del producto</mat-label>
+                        <input matInput type="text" formControlName="nombreP" required placeholder="Escribe el nombre del producto" class="block p-2.5 w-full h-6 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                      </mat-form-field>
+                      </div>
                   <div class="">
-                          <label class="text-black " >Descripcion </label>
-                          <textarea formControlName="categoria" rows="4" class="block p-2.5 w-full text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Descripcion del producto..."></textarea>
-                  </div>
+                       <mat-form-field class="example-full-width">
+                          <mat-label >Descripcion </mat-label>
+                          <textarea matInput #descripcion maxlength="256" formControlName="categoria" rows="4" class="block p-2.5 w-full text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Descripcion del producto..."></textarea>
+                          <mat-hint align="end">{{descripcion.value.length}} / 256</mat-hint>
+                        </mat-form-field>
+                        </div>
                         <div class="flex justify-between">
                           <div class="py-3"> 
                             <mat-form-field appearance="fill">
@@ -81,8 +87,8 @@
                           </div>
                           <div>      
 
-                            <mat-form-field>
-                            <input matInput type="text" class="block p-2.5 w-48 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Marca">
+                            <mat-form-field class="example-full-width">
+                            <input matInput type="text" required class="block p-2.5 w-48 h-8 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Marca">
                             </mat-form-field>
                           </div>
 
@@ -91,16 +97,16 @@
                         <!--Poner aqui-->
                         <div class="flex justify-between">
                           <div>
-                            <mat-form-field appearance="fill" floatLabel="always">
-                              <mat-label>Amount</mat-label>
-                              <input matInput type="number"  placeholder="0">
-                              <span matTextPrefix>$&nbsp;</span>
-                              <span matTextSuffix>.00</span>
+                            <mat-form-field class="example-full-width">
+                              <mat-label class="text-black " >Precio </mat-label>
+                              <input  class="h-8" matInput type="number"  placeholder="0">
                             </mat-form-field>
                           </div>
-                          <div>      
-                                <label class="text-black " for="emailAddress">Cantidad</label>
-                                <input matInput type="number" class="block p-2.5 w-48 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Cantidad">
+                          <div>
+                            <mat-form-field class="example-full-width">
+                              <mat-label class="text-black " >Cantidad</mat-label>
+                              <input  class="h-8" matInput type="number"  placeholder="0">
+                            </mat-form-field>
                           </div>
 
                         </div>
@@ -119,6 +125,7 @@
                     Agregar
                     </a>
               </div>
+              
             </form>
 
             </div>
