--- a/src/app/Modules/productos/components/agregar/agregar.component.css
+++ b/src/app/Modules/productos/components/agregar/agregar.component.css
@@ -4,28 +4,13 @@
   align-items: flex-start;
 }
 
-.example-container mat-form-field + mat-form-field {
-  margin-left: 8px;
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
 }
 
-.example-right-align {
-  text-align: right;
-}
-
-input.example-right-align::-webkit-outer-spin-button,
-input.example-right-align::-webkit-inner-spin-button {
-  display: none;
-}
-.example-container mat-form-field + mat-form-field {
-  margin-left: 8px;
-}
-
-.example-right-align {
-  text-align: right;
-}
-
-input.example-right-align::-webkit-outer-spin-button,
-input.example-right-align::-webkit-inner-spin-button {
-  display: none;
+.example-full-width {
+  width: 100%;
 }
 
