--- a/src/app/Modules/login/components/registrar/registrar.component.html
+++ b/src/app/Modules/login/components/registrar/registrar.component.html
@@ -1,6 +1,6 @@
 <body class="bg-gray-500 max-w-screen-2xl py-6 ">
-  <section class="max-w-4xl p-6 mx-auto bg-indigo-1280 rounded-lg shadow-md dark:bg-gray-800 ">
-      <h1 class="text-xl font-bold text-white capitalize dark:text-white">Account settings</h1>
+  <section class="max-w-4xl p-6 mx-auto bg-indigo-1280 rounded-lg shadow-md dark:bg-white ">
+      <h1 class="text-xl font-bold text-dark capitalize dark:text-dark">Registrarme</h1>
       <form [formGroup]="formularioRegistro" (ngSubmit)="submit()">
           <div class="grid grid-cols-1 gap-6 mt-4 sm:grid-cols-2">
               <div>
@@ -30,38 +30,43 @@
                     </mat-form-field>
               </div>
               <div>
-                <mat-form-field appearance="fill">
+                <mat-form-field class="example-full-width" appearance="fill">
                   <mat-label>Soy</mat-label>
-                  <mat-select [formControl]="rolControl">
-                    <mat-optgroup *ngFor="let group of rolGroups" [label]="group.name"
-                                  [disabled]="group.disabled">
-                      <mat-option *ngFor="let pokemon of group.rol" [value]="pokemon.value">
-                        {{pokemon.viewValue}}
-                      </mat-option>
-                    </mat-optgroup>
+                  <mat-select  [formControl]="rolControl">
+                  <mat-optgroup *ngFor="let group of rolGroups" [label]="group.name"
+                          [disabled]="group.disabled">
+                    <mat-option *ngFor="let rol of group.rol" [value]="rol.value">
+                    {{rol.viewValue}}
+                    </mat-option>
+                  </mat-optgroup>
                   </mat-select>
                 </mat-form-field>
               </div>
               <div>
-                  <label class="text-white dark:text-gray-200" for="passwordConfirmation">Fecha de nacimiento</label>
-                  <input id="date" type="date" class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
+                <mat-form-field class="example-full-width" appearance="fill">
+                  <mat-label>Fecha de nacimiento</mat-label>
+                  <input matInput formControlName="fechaN" required [matDatepicker]="picker">
+                  <mat-hint>Mes/Dia/Año</mat-hint>
+                  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                  <mat-datepicker #picker startView="year" [startAt]="startDate"></mat-datepicker>
+                </mat-form-field>
               </div>
               <div>
-                  <label class="block text-sm font-medium text-white">
+                  <label class="block text-sm font-medium text-dark">
                   Foto de perfil
                 </label>
                 <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
                   <div class="space-y-1 text-center">
-                    <svg class="mx-auto h-12 w-12 text-white" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                    <svg class="mx-auto h-12 w-12 text-dark" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
                       <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
-                    <div class="flex text-sm text-gray-600">
+                    <div class="flex text-sm text-dark">
                       <label for="file-upload" class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
                         <span class="">Subir archivo</span>
                         <input id="file-upload" name="file-upload" type="file" class="sr-only">
                       </label>
                     </div>
-                    <p class="text-xs text-white">
+                    <p class="text-xs text-dark">
                       PNG, JPG, GIF hasta 10MB
                     </p>
                   </div>
@@ -70,7 +75,7 @@
           </div>
 
           <div class="flex justify-end mt-6">
-              <button class="px-6 py-2 leading-5 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600">Registrarme</button>
+              <button class="px-6 py-2 leading-5 text-dark transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600">Registrarme</button>
           </div>
       </form>
   </section>
