--- a/src/app/Modules/productos/components/editproduc/edicproduc.component.html
+++ b/src/app/Modules/productos/components/editproduc/edicproduc.component.html
@@ -77,8 +77,8 @@
 											<mat-option>-- None --</mat-option>
 											<mat-optgroup *ngFor="let group of categoriaGroups" [label]="group.name"
 														  [disabled]="group.disabled">
-											  <mat-option *ngFor="let pokemon of group.categoria" [value]="pokemon.value">
-												{{pokemon.viewValue}}
+											  <mat-option *ngFor="let categoria of group.categoria" [value]="categoria.value">
+												{{categoria.viewValue}}
 											  </mat-option>
 											</mat-optgroup>
 										  </mat-select>
