imagen a la nube

--- a/src/app/Modules/landing/components/landing/landing.component.html
+++ b/src/app/Modules/landing/components/landing/landing.component.html
@@ -129,7 +129,7 @@
   <div class="grid grid-cols-2 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
     <a routerLink="/ver" class="group">
       <div class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
-        <img src="https://cdn.shopify.com/s/files/1/0287/9845/1786/products/Apple_iP6Gold_P2_a9a9946f-dfa2-400b-a08a-4e493d1158fc.png?v=1650483410" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." class="h-full w-full object-cover object-center group-hover:opacity-75">
+        <img src="https://firebasestorage.googleapis.com/v0/b/tiendafront-2b16d.appspot.com/o/arana-en-traje_3840x2160_xtrafondos.com.jpg?alt=media&token=4f7d20fd-b3c8-450b-ada8-1118e584f79a" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." class="h-full w-full object-cover object-center group-hover:opacity-75">
       </div>
       <h3 class="mt-4 text-sm text-gray-700">Iphone 6S</h3>
       <p class="mt-1 text-lg font-medium text-gray-900">$400.00</p>
